# bank-branch-footfall

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.airflow  Dockerfile.api  Dockerfile.etl  Dockerfile.etl_extract  Dockerfile.etl_transform_load  Dockerfile.streamlit  README.md  TESTS.md  activate.sh  cloudbuild-dummy.yaml  cloudbuild.yaml  docker-compose.yml  main.py  pip_reqs_folders.py  pyproject.toml  requirements-api.txt  requirements.txt  temp.py
.github/workflows/: ci.yml  python-linter.yml
.streamlit/: config.toml
API/: app.py
API/data_app/: __init__.py  agency.py  counter.py  random_seed.py
Extract/: query_api.py
Scripts/: query_api.py
airflow/: requirements-airflow.txt
airflow/dags/: backfill_extract_hourly.py  backfill_orchestrator.py  backfill_transform_monthly.py  banking_pipeline.py  banking_pipeline_backfill.py  dag_script.py  dag_script_extract_backfill.py  dag_script_transform_backfill.py  run_containers.py  test.py
api/: Dockerfile.api  app.py  requirements-api.txt
api/api/data_app/: agency.py
api/data_app/: __init__.py  agency.py  counter.py  random_seed.py  requirements-data_app.txt
api/data_app/db/: AgencyDetails.duckdb  init_agencies_db.py
app/: app.py  read_parquet_file.py
cloudbuilds/: cloudbuild-api.yaml  cloudbuild-app.yaml  cloudbuild-extract.yaml  cloudbuild-transform.yaml
data/2024_agencies_month_visitor_count.parquet/: .part-00000-c9846c20-be42-4824-85ff-ea1c46581943-c000.snappy.parquet.crc  part-00000-c9846c20-be42-4824-85ff-ea1c46581943-c000.snappy.parquet
data/data_base/: init_agencies_db.py
data/filtered/: part-00000-195a65ec-777c-48fe-9ca0-30d9e2e78390-c000.snappy.parquet
data/raw/: event_df_Cognin_1_all_counters_2024-12-01.csv  event_df_Cognin_1_all_counters_2024-12.csv  event_df_all_agencies_2024-12.csv  events_all_agencies_counters_2024-03-01-2024-03-31.csv  events_all_agencies_counters_2024-04-01-2024-04-30.csv  events_all_agencies_counters_2024-08-01-2024-08-31.csv  events_all_agencies_counters_2024-11-01-2024-11-30.csv  events_all_agencies_counters_2024-12-01-2024-12-31.csv
data/raw/backup/: event_df_all_agencies_2024-11.csv
etl/: extract.py  requirements-etl.txt  transform_load.py
extract/: extract.py  extract_ancien.py  query_api.py  requirements-etl_extract.txt
images/: bank-branch-footfall-workflow.excalidraw.json
monitoring/: prometheus.yml
old/extract/: extract_ancien.py  requirements-etl_extract.txt
old/transform_load/: transform_load.py
src/: log.txt  sensor.py
src/API/: app.py
src/Sensor/: log.txt
src/bank_footfall/: __init__.py
src/bank_footfall.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
temp/: cloudbuild-dummy.yaml
tests/: conftest.py  test_agency.TODOpy  test_agency.py  test_config.py  test_counter.py  test_etl_transform.py  test_extract.py  test_models.py  test_sensor.py
tests/app_tests/: test_app_smoke.py  test_data_helpers.py  test_display_helpers.py
transform/: data_pipeline.py  main.py  read_data.py
transform_load/: Dockerfile.etl_transform_load  requirements-etl_transform_load.txt  transform_load.py
web_app/: app.py
webapp/: app.py
webapp/testing/: read_parquet_file.py  read_parquet_file_from_github.py
(+38 files in other folders)
