[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bank-footfall"
version = "0.1.0"
description = "Data engineering project to track simulated footfall in banking agencies"
authors = [
    { name = "Michael Garcia" }
]
readme = "README.md"
requires-python = ">=3.9"

# Dépendances basées sur votre requirements.txt existant
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pandas",
    "requests",
    "apache-airflow",
    "pyspark",
    "duckdb",
    "streamlit",
    "pyarrow",  # pour parquet
    "pydantic>=2.0.0",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

# Configuration Ruff pour le linting/formatting
[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

# Configuration pour hatchling - spécifier où se trouve le code
[tool.hatch.build.targets.wheel]
packages = ["bank_footfall"]
