[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-footfall"
version = "0.1.0"
description = "Data engineering project to track simulated footfall in banking agencies"
authors = [{ name = "Michael Garcia" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pandas",
    "requests",
    "apache-airflow",
    "pyspark",
    "duckdb",
    "streamlit",
    "pyarrow",
    "pydantic>=2.0.0",
    "python-dotenv",
    "fuzzywuzzy>=0.18.0",
    "pydantic-settings>=2.11.0",
    "python-levenshtein>=0.27.1",
]

[tool.setuptools.packages.find]
# Scans for packages=bank_footfall + __init__.py automatically
where = ["src"]


[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

# Configuration Ruff pour le linting/formatting
[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
]
