[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-footfall"
version = "0.1.0"
description = "Data engineering project to track simulated footfall in banking agencies"
authors = [{ name = "Michael Garcia" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pandas",
    "requests",
    "apache-airflow>=3.1.5",
    "pyspark",
    "duckdb",
    "streamlit",
    "pyarrow",
    "pydantic>=2.0.0",
    "python-dotenv",
    "fuzzywuzzy>=0.18.0",
    "pydantic-settings>=2.11.0",
    "python-levenshtein>=0.27.1",
    "sqlmodel>=0.0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

# Ruff config (unchanged)
[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

# Single source of truth for dev deps
[dependency-groups]
dev = [
  "pre-commit",
  "ruff",
  "pytest",
  "pytest-cov",
]
